--- a/app/src/main/res/layout/activity_sample3.xml
+++ b/app/src/main/res/layout/activity_sample3.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <!--指定生成的binding类名-->
-    <data class=".SampleActivityBinding">
+    <data class=".AutoSampleActivityBinding3">
         <!--指定该类中需要使用到的数据类型-->
-        <import type="com.sung.databinding.sample.User" />
+        <import type="com.sung.databinding.observablefield.User3" />
         <!--指定类型以及别名 别名可在binding类中使用setXXX(别名)设置-->
         <variable
             name="user"
-            type="com.sung.databinding.sample.User" />
-
+            type="com.sung.databinding.observablefield.User3" />
+        <!--指定OnClickListener-->
         <variable
             name="listener"
             type="android.view.View.OnClickListener" />
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="手动set方式"
+            android:text="使用ObservableField"
             android:textColor="@android:color/darker_gray"
             android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -47,6 +47,17 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/tv_sex"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@{user.sex,default=默认文案}"
+            android:textColor="@android:color/holo_red_light"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+
+        <TextView
             android:id="@+id/tv_age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,18 +66,29 @@
             android:textColor="@android:color/holo_red_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_sex" />
 
-        <Button
-            android:id="@+id/btn_refresh"
+        <TextView
+            android:id="@+id/tv_grade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:onClick="@{listener::onClick}"
-            android:text="refresh"
+            android:text="@{String.valueOf(user.grade),default=默认文案}"
+            android:textColor="@android:color/holo_red_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_age" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_age" />
+
+        <Button
+            android:id="@+id/btn_both_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:onClick="@{listener::onClick}"
+            android:text="全量更新"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_grade" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
