--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/btn_sample"
-        android:text="基础示例"
-        android:onClick="onClick"
-        android:minWidth="220dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20dp">
 
-    <Button
-        android:id="@+id/btn_auto"
-        android:text="使用BaseObservable"
-        android:onClick="onClick"
-        android:minWidth="220dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="单向绑定示例" />
 
-    <Button
-        android:id="@+id/btn_auto_field"
-        android:text="使用ObservableField"
-        android:onClick="onClick"
-        android:minWidth="220dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_sample"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minWidth="220dp"
+            android:onClick="onClick"
+            android:text="base" />
 
-    <Button
-        android:id="@+id/btn_auto_collection"
-        android:text="使用ObservableCollection"
-        android:onClick="onClick"
-        android:minWidth="220dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minWidth="220dp"
+            android:onClick="onClick"
+            android:text="BaseObservable" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/btn_auto_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minWidth="220dp"
+            android:onClick="onClick"
+            android:text="ObservableField" />
+
+        <Button
+            android:id="@+id/btn_auto_collection"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minWidth="220dp"
+            android:onClick="onClick"
+            android:text="ObservableCollection" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            android:text="双向绑定示例" />
+
+        <Button
+            android:id="@+id/btn_mutual"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minWidth="220dp"
+            android:onClick="onClick"
+            android:text="base" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            android:text="BindingAdapter示例" />
+
+        <Button
+            android:id="@+id/btn_binding_adapter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minWidth="220dp"
+            android:onClick="onClick"
+            android:text="BindingAdapter" />
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
