--- a/app/src/main/res/layout/activity_sample_mutual.xml
+++ b/app/src/main/res/layout/activity_sample_mutual.xml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!--指定生成的binding类名-->
-    <data class=".SampleActivityBinding">
-        <!--指定该类中需要使用到的数据类型-->
-        <import type="com.sung.databinding.model.User" />
-        <!--指定类型以及别名 别名可在binding类中使用setXXX(别名)设置-->
+    <data class=".MutualSampleActivityBinder">
+
+        <import type="com.sung.databinding.model.MutualUser" />
+
         <variable
             name="user"
-            type="com.sung.databinding.model.User" />
-
-        <variable
-            name="listener"
-            type="android.view.View.OnClickListener" />
+            type="MutualUser" />
     </data>
 
-    <!--根布局-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".sample.SampleActivity">
+        android:layout_height="match_parent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="手动set方式"
+            android:text="双向绑定示例"
             android:textColor="@android:color/darker_gray"
             android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -42,31 +34,37 @@
             android:layout_marginTop="250dp"
             android:text="@{user.user,default=默认文案}"
             android:textColor="@android:color/holo_red_light"
+            android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_age"
+        <EditText
+            android:id="@+id/et_content"
+            android:minWidth="100dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@{String.valueOf(user.age),default=默认文案}"
-            android:textColor="@android:color/holo_red_light"
+            android:gravity="center"
+            android:hint="tips"
+            android:maxLines="1"
+            android:text="@={user.user,default=默认文案}"
+            android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
-        <Button
-            android:id="@+id/btn_refresh"
+        <TextView
+            android:id="@+id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:onClick="@{listener::onClick}"
-            android:text="refresh"
+            android:layout_marginTop="40dp"
+            android:gravity="center"
+            android:textSize="14sp"
+            android:textColor="@android:color/holo_red_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_age" />
+            app:layout_constraintTop_toBottomOf="@+id/et_content" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
